# backend/openapi.json
@@ -371,6 +371,29 @@
         ]
       }
     },
+    "/api/v1/orders/caja": {
+      "get": {
+        "operationId": "OrdersController_findForCaja",
+        "parameters": [
+          {
+            "name": "locationId",
+            "required": true,
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "Orders"
+        ]
+      }
+    },
     "/api/v1/orders/{id}": {
       "get": {
         "operationId": "OrdersController_findOne",
